--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7355,7 +7355,7 @@ span.title {
 .grid .ui > ul > li > a {
   display: block;
   width: 100%;
-  height: 40px;
+  height: 50px;
   text-indent: -9000px;
 }
 
@@ -7365,40 +7365,45 @@ span.title {
 }
 
 /* line 245, ../sass/app.scss */
-.badge-thumbs .badge_action.bdel,
-.collection-thumbs .collection_action.cdel {
-  background-position: center -3px;
+.badge_action.bdel,
+.collection_action.cdel {
+  background-position: center 0px;
 }
 
 /* line 248, ../sass/app.scss */
-.badge-thumbs .badge_action.bcol {
-  background-position: center -271px;
+.badge_action.bcol {
+  background-position: center -267px;
 }
 
 /* line 252, ../sass/app.scss */
-.badge-thumbs .badge_action.bdet,
-.collection-thumbs .collection_action.cdet {
-  background-position: center -204px;
+.badge_action.bdet,
+.collection_action.cdet {
+  background-position: center -200px;
 }
 
 /* line 255, ../sass/app.scss */
-.collection-thumbs .collection_action.csha {
+.collection_action.csha {
   background-position: center -137px;
 }
 
 /* line 258, ../sass/app.scss */
+.collection_action.cedi {
+  background-position: center -69px;
+}
+
+/* line 261, ../sass/app.scss */
 .collections .badge-thumbs {
   margin-left: 0px;
 }
 
-/* line 261, ../sass/app.scss */
+/* line 264, ../sass/app.scss */
 .badge-thumbs.vertical > li {
   list-style-type: none;
   margin-bottom: 0.625em;
   position: relative;
 }
 
-/* line 266, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 .badge-thumbs.vertical > li > .badgethumb {
   background-position: 12px center;
   background-repeat: no-repeat;
@@ -7407,19 +7412,19 @@ span.title {
   min-height: 90px;
 }
 
-/* line 273, ../sass/app.scss */
+/* line 276, ../sass/app.scss */
 .badge-thumbs.vertical > li > .badgethumb > span {
   margin-left: 75px;
   padding-top: 0.625em;
   padding-bottom: 0.625em;
 }
 
-/* line 278, ../sass/app.scss */
+/* line 281, ../sass/app.scss */
 .badge-thumbs.vertical > li > .badgethumb span {
   display: block;
 }
 
-/* line 282, ../sass/app.scss */
+/* line 285, ../sass/app.scss */
 .badge-thumbs.vertical .ui {
   width: inherit;
   position: absolute;
@@ -7431,35 +7436,35 @@ span.title {
   padding-right: 0.625em;
 }
 
-/* line 292, ../sass/app.scss */
+/* line 295, ../sass/app.scss */
 .badge-thumbs.vertical .ui > ul {
-  border-radius: 5px;
+  border-radius: 2px;
   border: 1px solid #e5e5e5;
 }
 
-/* line 296, ../sass/app.scss */
+/* line 299, ../sass/app.scss */
 .badge-thumbs.vertical > li > .badgethumb > .detail > .title {
   line-height: 2;
 }
 
-/* line 299, ../sass/app.scss */
+/* line 302, ../sass/app.scss */
 .fullbadge img {
   float: right;
 }
 
-/* line 302, ../sass/app.scss */
+/* line 305, ../sass/app.scss */
 .fullbadge p {
   line-height: 1.25em;
 }
 
-/* line 305, ../sass/app.scss */
+/* line 308, ../sass/app.scss */
 .collection_action {
   background-repeat: no-repeat;
   background-image: url("../img/sprite.png");
 }
 
-/* line 309, ../sass/app.scss */
-.collections .collection_action {
+/* line 312, ../sass/app.scss */
+.collection_action {
   height: 40px;
   display: block;
   float: left;
@@ -7467,34 +7472,30 @@ span.title {
   width: 30px;
 }
 
-/* line 316, ../sass/app.scss */
-.collections .collection_action.cdel {
-  background-position: -1px 0px;
-}
-
 /* line 319, ../sass/app.scss */
-.collections .collection_action.csha {
-  background-position: 0px -134px;
+h2 .collection_action {
+  float: right;
+  margin-top: 8px;
 }
 
-/* line 323, ../sass/app.scss */
+/* line 324, ../sass/app.scss */
 .logged-out.public .square.grid > li > p.badgethumb {
   background-color: #fff;
 }
 
-/* line 333, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .issuer .badge-thumbs.vertical > li {
   margin-bottom: 0.625em;
   padding-bottom: 0px;
 }
 
-/* line 337, ../sass/app.scss */
+/* line 338, ../sass/app.scss */
 .issuer.confirm .badge-thumbs.vertical > li > .badgethumb {
   float: left;
   width: 90%;
 }
 
-/* line 341, ../sass/app.scss */
+/* line 342, ../sass/app.scss */
 .issuer.confirm .badge-thumbs.vertical > li > span {
   float: right;
   display: block;
